<resources>
    <string name="app_name">Calculate</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_pt">.</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="clear">C</string>
    <string name="theme_mode">Светлая тема</string>
    <string name="setings">Настройки</string>
    <string name="_return">Назад</string>
</resources>