<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/inputTextView"
        style="@style/TextView"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/input_height"
        android:gravity="bottom|end"
        android:textSize="@dimen/inputTextSize"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/barrierhor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_minus"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDecimal"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_pt"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/theme"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button1"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button2"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btnDecimal"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button0"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/theme"
        app:layout_constraintEnd_toStartOf="@+id/btnDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_divide"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button9"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintEnd_toStartOf="@id/barrierver"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/barrierhor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button4"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button6"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintEnd_toStartOf="@id/barrierver"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button8"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@id/barrierhor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEquals"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_equal"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/theme"
        app:layout_constraintEnd_toStartOf="@id/barrierver"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button7"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierhor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button3"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        app:layout_constraintEnd_toStartOf="@id/barrierver"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_plus"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMinus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button5"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMultiply"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/button_multiply"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDivide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/clear"
        android:textSize="@dimen/textSizeBtn"
        app:layout_constraintBottom_toTopOf="@+id/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierhor" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:text="@string/theme_mode"
        android:textSize="@dimen/textSizeSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barrierver"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierhor"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btn8,btn7,btn6,btn5,btnEquals,btn2,btn9,btn1,btn4,btnDecimal,btn3,btn0"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="btnClear,btnPlus,btnMinus,btnDivide,btnMultiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>





